update spiderman project

--- a/public/Trailer.html
+++ b/public/Trailer.html
@@ -9,318 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Butcherman&family=Dancing+Script:wght@700&family=Dosis:wght@200..800&family=Ravi+Prakash&family=Rubik+Beastly&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Sixtyfour&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
-    <style>
-        body {
-            background: url(images/bc\ spi.jpg);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-
-
-        header {
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-left: 150px;
-            font-size: 10px;
-        }
-
-        header h1 {
-            color: red;
-            font-family: "Rubik Wet Paint", system-ui;
-            font-weight: 400;
-            font-style: normal;
-            font-size: 30px;
-        }
-
-        header h1:hover {
-            text-shadow: 0 0 10px red, 0 0 20px red;
-            -webkit-text-stroke: 2px red, 2px black;
-        }
-
-        nav li {
-            list-style: none;
-            margin-right: 50px;
-        }
-
-        nav a {
-            color: black;
-            font-size: 20px;
-            text-decoration: none;
-            display: flex;
-        }
-
-        nav a:hover {
-            color: white;
-        }
-
-        .order {
-            display: flex;
-        }
-
-        h2 {
-            text-align: center;
-            font-size: 38px;
-            text-transform: uppercase;
-            color: black;
-            text-shadow: 0 0 10px red, 0 0 20px red;
-            -webkit-text-stroke: 2px red;
-            margin-top: 20px;
-            font-family: "Rubik Wet Paint", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        h4 {
-            text-align: center;
-            color: white;
-        }
-
-        .content {
-            max-width: 900px;
-            margin: auto;
-            font-size: 18px;
-            line-height: 1.7;
-            text-align: justify;
-            color: #fff;
-            padding: 10px 20px 40px;
-        }
-
-        .content span {
-            color: #ff0000;
-            font-weight: bold;
-        }
-
-        .fade-in {
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 0.8s ease-out;
-        }
-
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .about-section {
-            display: flex;
-            align-items: center;
-            gap: 40px;
-            margin-top: 40px;
-        }
-
-        .about-section img {
-            width: 350px;
-            border-radius: 15px;
-            box-shadow: 0 0 20px red;
-            transition: .4s ease;
-        }
-
-        .about-section img:hover {
-            transform: scale(1.05);
-        }
-
-        .about-text {
-            width: 100%;
-            margin-left: 80px;
-        }
-
-        @media (max-width: 768px) {
-            header {
-                margin-left: 20px;
-            }
-
-            .about-section {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .about-section img {
-                width: 250px;
-            }
-        }
-
-        .movies-title {
-            margin-top: 40px;
-        }
-
-        .card-container {
-            max-width: 1100px;
-            margin: 20px auto 60px;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 25px;
-        }
-
-        @media (max-width: 900px) {
-            .card-container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media (max-width: 600px) {
-            .card-container {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        .card {
-            background: #111;
-            border-radius: 12px;
-            border: 2px solid red;
-            overflow: hidden;
-            cursor: pointer;
-            transition: transform .2s ease, box-shadow .3s ease;
-        }
-
-        .card img {
-            width: 100%;
-            height: 260px;
-            object-fit: cover;
-            display: block;
-        }
-
-        .card-title {
-            text-align: center;
-            padding-top: 8px;
-            font-weight: bold;
-            color: red;
-        }
-
-        .stars {
-            text-align: center;
-            margin-top: 5px;
-            font-size: 18px;
-            color: #FFD700;
-            text-shadow: 0 0 8px #FFD700, 0 0 15px red;
-            letter-spacing: 3px;
-        }
-
-        .card-desc {
-            font-size: 13px;
-            text-align: center;
-            padding: 10px 10px 15px;
-            color: #eee;
-        }
-
-        .card:hover {
-            box-shadow: 0 0 20px red;
-            transform: translateY(-5px);
-        }
-
-        .popup {
-            position: fixed;
-            inset: 0;
-            background: rgba(0, 0, 0, 0.85);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            z-index: 999;
-        }
-
-        .popup-content {
-            width: 700px;
-            max-width: 95vw;
-            background: #111;
-            border: 2px solid red;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            animation: zoom 0.4s ease;
-            color: #fff;
-        }
-
-        @keyframes zoom {
-            from {
-                transform: scale(0.7);
-            }
-
-            to {
-                transform: scale(1);
-            }
-        }
-
-        .popup iframe {
-            width: 100%;
-            height: 350px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-        }
-
-        .close-btn {
-            font-size: 28px;
-            float: right;
-            cursor: pointer;
-            color: white;
-        }
-
-        .close-btn:hover {
-            color: red;
-        }
-
-        .video1 {
-            width: 250px;
-            transform: rotate(-90deg);
-            margin-left: -100px;
-            border-radius: 20px;
-        }
-
-        .note {
-            text-align: center;
-            color: white;
-        }
-
-
-        .watch-btn {
-            width: 50%;
-            margin: 10px auto 15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 6px;
-            padding: 10px 0;
-
-            background: linear-gradient(to right, #010101, #3a3434);
-            border: none;
-            border-radius: 6px;
-
-            font-size: 14px;
-            font-weight: bold;
-            color: red;
-            cursor: pointer;
-            letter-spacing: 1px;
-
-            transition: 0.3s ease-in-out;
-            text-transform: uppercase;
-            box-shadow: 0 0 10px red;
-        }
-
-        .watch-btn:hover {
-            transform: scale(1.08);
-            box-shadow:
-                0 0 10px red,
-                0 0 20px #ff2b2b,
-        }
-
-        .watch-btn:hover::before {
-            content: "🕸";
-            animation: thwip 0.3s linear forwards;
-        }
-
-        @keyframes thwip {
-            from {
-                transform: translateX(-10px) rotate(-30deg);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateX(0) rotate(0deg);
-                opacity: 1;
-            }
-        }
-    </style>
+  
 </head>
 
 <body>
@@ -331,7 +20,7 @@
             <li>
                 <ul class="order">
                     <li>
-                        <h1><a href="body.html">Home</a></h1>
+                        <h1><a href="index.html">Home</a></h1>
                     </li>
                     <li>
                         <h1><a href="Trailer.html">Trailer</a></h1>
