--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <nav>
             <li>
                 <ul class="order">
-                    <li><h1><a href="body.html">Home</a></h1></li>
+                    <li><h1><a href="index.html">Home</a></h1></li>
                     <li><h1><a href="Trailer.html">Trailer</a></h1></li>
                     <li><h1><a href="movies.html">Movies</a></h1></li>
                     <li><h1><a href="">About</a></h1></li>
