--- a/public/movies.html
+++ b/public/movies.html
@@ -11,164 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Butcherman&family=Dancing+Script:wght@700&family=Dosis:wght@200..800&family=Ravi+Prakash&family=Rubik+Beastly&family=Rubik+Doodle+Shadow&family=Rubik+Wet+Paint&family=Sixtyfour&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
     rel="stylesheet">
 
-  <style>
-    body {
-      background-image: url(images/bc\ spi.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-      height: 100vh;
-    }
-
-    header {
-      margin-top: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-left: 150px;
-      font-size: 10px;
-    }
-
-    h2 {
-      text-align: center;
-      font-family: "Rubik Wet Paint", system-ui;
-      font-weight: 400;
-      font-style: normal;
-      color: red;
-
-    }
-
-    header h1 {
-      color: red;
-      font-family: "Rubik Wet Paint", system-ui;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 30px;
-    }
-
-    header h1:hover {
-      text-shadow: 0 0 10px red, 0 0 20px red;
-      -webkit-text-stroke: 2px red, 2px black;
-    }
-
-
-    nav li {
-      list-style: none;
-      margin-right: 50px;
-    }
-
-    nav a {
-      color: black;
-      font-size: 20px;
-      text-decoration: none;
-      display: flex;
-    }
-
-    nav a:hover {
-      color: white;
-    }
-
-    .order {
-      display: flex;
-    }
-
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 30px;
-      justify-items: center;
-      padding: 20px;
-    }
-
-
-    .card {
-      height: 400px;
-      width: 300px;
-      border: 2px solid red;
-      border-radius: 10px;
-      overflow: hidden;
-      background: #111;
-      transition: transform .1s linear, box-shadow .3s ease;
-      cursor: pointer;
-    }
-
-    .card img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      transition: transform .4s;
-    }
-
-    .card:hover img {
-      transform: scale(1.15);
-    }
-
-    .card:hover {
-      box-shadow: 0 0 20px red;
-      transform: translateY(-5px);
-    }
-
-    .card-desc {
-      padding: 8px;
-      font-size: 12px;
-      text-align: center;
-      color: #fff;
-    }
-
-    .stars {
-      text-align: center;
-      margin-top: 5px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #FFD700;
-      text-shadow: 0 0 8px #FFD700, 0 0 15px red;
-      letter-spacing: 3px;
-    }
-
-    .stars:hover {
-      text-shadow: 0 0 12px #FFD700, 0 0 25px red;
-      transform: scale(1.05);
-    }
-
-
-    .card-title {
-      text-align: center;
-      padding: 8px 0;
-      font-size: 14px;
-      font-weight: bold;
-      color: red;
-    }
-
-    @media (max-width: 480px) {
-      body {
-        padding: 10px;
-      }
-
-      .card-container {
-        gap: 15px;
-      }
-
-      .card {
-        width: 140px;
-      }
-
-      .card img {
-        height: 200px;
-      }
-
-      .card-title {
-        font-size: 12px;
-      }
-    }
-
-   
-    @media (max-width: 600px) {
-      .card-container {
-        grid-template-columns: repeat(1, 1fr);
-      }
-    }
-  </style>
+  
 
 </head>
 
@@ -179,7 +22,7 @@
       <li>
         <ul class="order">
           <li>
-            <h1><a href="body.html">Home</a></h1>
+            <h1><a href="index.html">Home</a></h1>
           </li>
           <li>
             <h1><a href="Trailer.html">Trailer</a></h1>
