update spiderman project

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <h1>wolrd of spiderman</h1>
-        <p class="fade-in">
+        <p class="fadein">
   The <span>Man</span> begins with an ordinary boy whose life changes after one bite. 
   A radioactive spider gives Peter powers that transform him into a wall-crawling hero. 
   He swings through the city saving lives and facing dangerous villains every day. 
